--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -2,7 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
+   "id": "4af619fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "6773efe9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +36,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77401940",
    "metadata": {},
    "source": [
     "## 1. Load the datasets"
@@ -41,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b7f86c5",
    "metadata": {},
    "source": [
     "For the project, we provide a training set with 50000 images in the directory `../data/images/` with:\n",
@@ -50,7 +54,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
+   "id": "a6c28b85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,6 +77,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b9eb3eaf",
    "metadata": {},
    "source": [
     "For illustration, we present a small subset (of size 8) of the images with their clean and noisy labels in `clean_noisy_trainset`. You are encouraged to explore more characteristics of the label noises on the whole dataset. "
@@ -79,7 +85,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
+   "id": "ce3973f3",
    "metadata": {
     "scrolled": true
    },
@@ -143,6 +150,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f53e1a62",
    "metadata": {},
    "source": [
     "## 2. The predictive model\n",
@@ -152,6 +160,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "51e1309f",
    "metadata": {},
    "source": [
     "### 2.1. Baseline Model"
@@ -159,7 +168,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
+   "id": "15fcc348",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
+   "id": "b92eb12a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,6 +209,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f9e43ee6",
    "metadata": {},
    "source": [
     "For the convenience of evaluation, we write the following function `predictive_model` that does the label prediction. **For your predictive model, feel free to modify the function, but make sure the function takes an RGB image of numpy.array format with dimension $32\\times32\\times3$  as input, and returns one single label as output.**"
@@ -205,7 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "ebce0d0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,6 +238,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cf56bd9e",
    "metadata": {},
    "source": [
     "### 2.2. Model I\n",
@@ -236,6 +250,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "17fde062",
    "metadata": {},
    "source": [
     "- **Data Preparation**\n",
@@ -245,6 +260,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0a231b5d",
    "metadata": {},
    "source": [
     "- **Model Building**\n",
@@ -263,7 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "id": "f161773e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,21 +289,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
+   "id": "a8ca686d",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model I should be pretrained: load from '../output/' if possible\n",
     "if \"model_1\" in os.listdir(\"../output/\"):\n",
-    "    model_1 = tf.keras.models.load_model(\"../output/model_1\")\n",
+    "    mod_1 = tf.keras.models.load_model(\"../output/model_1\")\n",
     "else:\n",
     "    train_model_1()\n",
-    "    model_1 = tf.keras.models.load_model(\"../output/model_1\")\n",
+    "    mod_1 = tf.keras.models.load_model(\"../output/model_1\")\n",
     "model_1_res = pickle.load(open(\"../output/model_1_train_history\", \"rb\"))"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "621106ab",
    "metadata": {},
    "source": [
     "Source code of model_1"
@@ -294,6 +313,7 @@
   },
   {
    "cell_type": "raw",
+   "id": "392857db",
    "metadata": {},
    "source": [
     "def model_1(num_classes):\n",
@@ -323,7 +343,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
+   "id": "7d93d609",
    "metadata": {},
    "outputs": [
     {
@@ -380,11 +401,12 @@
     }
    ],
    "source": [
-    "model_1.summary()"
+    "mod_1.summary()"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "16d10ace",
    "metadata": {},
    "source": [
     "- **Results**\n",
@@ -396,7 +418,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
+   "id": "6d12b7a2",
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +468,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 38,
+   "id": "7f501596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,12 +484,13 @@
     "    This function should takes in the image of dimension 32*32*3 as input and returns a label prediction\n",
     "    '''\n",
     "    image = image / 255.0\n",
-    "    prediction_prob = model_1.predict(np.array([image]))\n",
-    "    return np.argmax(pred)"
+    "    prediction_prob = mod_1.predict(np.array([image]))\n",
+    "    return np.argmax(prediction_prob)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "af3a7118",
    "metadata": {},
    "source": [
     "### 2.3. Model II\n",
@@ -475,6 +500,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d8ace863",
    "metadata": {},
    "source": [
     "- **Step 1:** We build a two-branch neural network as a label classifier, where the CNN takes image and noisy labels as input, tries to find functions that understand relation between images, noisy labels and clean labels, and gives clean labels as output (y). \n",
@@ -484,7 +510,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
+   "id": "0a1b02e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,24 +520,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
+   "id": "c8cab2dc",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Model II should be pretrained: load from '../output/' if possible\n",
     "if \"model_2\" in os.listdir(\"../output/\"):\n",
     "    label_classifier = tf.keras.models.load_model(\"../output/label_classifier\")\n",
-    "    model_2 = tf.keras.models.load_model(\"../output/model_2\")\n",
+    "    mod_2 = tf.keras.models.load_model(\"../output/model_2\")\n",
     "else:\n",
     "    train_model_2()\n",
     "    label_classifier = tf.keras.models.load_model(\"../output/label_classifier\")\n",
-    "    model_2 = tf.keras.models.load_model(\"../output/model_2\")\n",
+    "    mod_2 = tf.keras.models.load_model(\"../output/model_2\")\n",
     "model_2_res = pickle.load(open(\"../output/model_2_train_history\", \"rb\"))\n",
     "label_classifier_res = pickle.load(open(\"../output/label_classifier_train_history\", \"rb\"))"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "8201944b",
    "metadata": {},
    "source": [
     "Source code for label classifier. After label classifier is trained, data passes through label classifier and model I is retrained with predicted labels as the target."
@@ -518,6 +547,7 @@
   },
   {
    "cell_type": "raw",
+   "id": "9e44a890",
    "metadata": {},
    "source": [
     "def label_classifier(n_classes):\n",
@@ -556,7 +586,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
+   "id": "930e7de1",
    "metadata": {
     "scrolled": false
    },
@@ -626,6 +657,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1857dd6",
    "metadata": {},
    "source": [
     "- Results\n",
@@ -634,7 +666,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
+   "id": "5969dedd",
    "metadata": {
     "scrolled": false
    },
@@ -685,7 +718,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 39,
+   "id": "ba9505a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,12 +735,13 @@
     "    This function should takes in the image of dimension 32*32*3 as input and returns a label prediction\n",
     "    '''\n",
     "    image = image / 255.0\n",
-    "    prediction_prob = model_2.predict(np.array([image]))\n",
-    "    return np.argmax(pred)"
+    "    prediction_prob = mod_2.predict(np.array([image]))\n",
+    "    return np.argmax(prediction_prob)"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "953771c9",
    "metadata": {},
    "source": [
     "## 3. Evaluation"
@@ -714,6 +749,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9188aef3",
    "metadata": {},
    "source": [
     "For assessment, we will evaluate your final model on a hidden test dataset with clean labels by the `evaluation` function defined as follows. Although you will not have the access to the test set, the function would be useful for the model developments. For example, you can split the small training set, using one portion for weakly supervised learning and the other for validation purpose. "
@@ -721,7 +757,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
+   "id": "90a619e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -736,16 +773,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
+   "id": "a517c525",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'baseline_model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/29/z1b1v1g14xn82wyq4fkt1k100000gn/T/ipykernel_48542/316277162.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mimg_fn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf'../data/test_images/test{i+1:05d}.png'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0mtest_imgs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcvtColor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimg_fn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCOLOR_BGR2RGB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m \u001b[0mevaluation\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbaseline_model\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_labels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtest_imgs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'baseline_model' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# [DO NOT MODIFY THIS CELL]\n",
     "# This is the code for evaluating the prediction performance on a testset\n",
     "# You will get an error if running this cell, as you do not have the testset\n",
     "# Nonetheless, you can create your own validation set to run the evlauation\n",
     "n_test = 10000\n",
-    "test_labels = np.genfromtxt('../data/test_labels.csv', delimiter=',', dtype=\"int8\")\n",
+    "# test_labels = np.genfromtxt('../data/test_labels.csv', delimiter=',', dtype=\"int8\")\n",
     "test_imgs = np.empty((n_test,32,32,3))\n",
     "for i in range(n_test):\n",
     "    img_fn = f'../data/test_images/test{i+1:05d}.png'\n",
@@ -755,6 +805,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4b9a641d",
    "metadata": {},
    "source": [
     "The overall accuracy is $0.24$, which is better than random guess (which should have a accuracy around $0.10$). For the project, you should try to improve the performance by the following strategies:\n",
@@ -767,6 +818,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d135aad9",
    "metadata": {},
    "source": [
     "## Results to CSV"
@@ -774,30 +826,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
+   "id": "04e3ad1a",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Read test data\n",
     "n_test = 10000\n",
     "test_imgs = np.empty((n_test,32,32,3))\n",
-    "name_list = np.empty((n_test)\n",
-    "test_labels = np.genfromtxt('../data/test_labels.csv', delimiter=',', dtype=\"int8\"))\n",
-    "for i in range(n_test):\n",
+    "name_list = np.empty((n_test))\n",
+    "\n",
+    "for i in range(0, n_test):\n",
     "    img_fn = f'../data/test_images/test{i+1:05d}.png'\n",
     "    name_list[i] = f'{i+1:05d}'\n",
     "    test_imgs[i,:,:,:]=cv2.cvtColor(cv2.imread(img_fn),cv2.COLOR_BGR2RGB)\n",
+    "\n",
     "\n",
     "def get_res(model,test_imgs):\n",
     "    \"\"\"Given set of images, returns predictions.\"\"\"\n",
     "    y_pred = []\n",
     "    for image in test_imgs:\n",
-    "        y_pred.append(model(image))\n",
-    "    return y_pred\n",
-    "    \n",
+    "        y_pred.append(model(image)[0])\n",
+    "    return y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "bfd3de64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "res1 = get_res(baseline_model, test_imgs)\n",
-    "res2 = get_res(model_I, test_imgs)\n",
-    "res3 = get_res(model_II, test_imgs)\n",
+    "\n",
+    "test_imgs = test_imgs / 255.0\n",
+    "res2 = np.argmax(mod_1.predict(test_imgs), axis=1)\n",
+    "res3 = np.argmax(mod_2.predict(test_imgs), axis=1)\n",
     "\n",
     "results = {\n",
     "    \"Index\":name_list,\n",
@@ -813,6 +877,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "baadc114",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +897,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -846,7 +911,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
