--- a/doc/main.ipynb
+++ b/doc/main.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,14 +201,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The trainging time of baseline model is  22.859375\n"
+      "The trainging time of baseline model is  17.75\n"
      ]
     }
    ],
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,6 +243,13 @@
     "    \n",
     "    \n",
     "    return clf.predict(feature)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Accuracy of baseline model is in section 3 Evaluation."
    ]
   },
   {
@@ -780,6 +787,120 @@
     "    img_fn = f'../data/test_images/test{i+1:05d}.png'\n",
     "    test_imgs[i,:,:,:]=cv2.cvtColor(cv2.imread(img_fn),cv2.COLOR_BGR2RGB)\n",
     "evaluation(baseline_model, test_labels, test_imgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.32      0.43      0.37      1005\n",
+      "           1       0.18      0.29      0.22       974\n",
+      "           2       0.22      0.04      0.07      1032\n",
+      "           3       0.19      0.12      0.14      1016\n",
+      "           4       0.24      0.48      0.32       999\n",
+      "           5       0.22      0.13      0.16       937\n",
+      "           6       0.26      0.35      0.30      1030\n",
+      "           7       0.29      0.04      0.07      1001\n",
+      "           8       0.28      0.43      0.34      1025\n",
+      "           9       0.19      0.11      0.14       981\n",
+      "\n",
+      "    accuracy                           0.24     10000\n",
+      "   macro avg       0.24      0.24      0.21     10000\n",
+      "weighted avg       0.24      0.24      0.21     10000\n",
+      "\n",
+      "The training time of baseline model is: 3.59375s\n"
+     ]
+    }
+   ],
+   "source": [
+    "# accuracy for the baseline model\n",
+    "start = time.process_time()\n",
+    "evaluation(baseline_model, clean_labels, imgs[:10000])\n",
+    "end = time.process_time() - start\n",
+    "print(f\"The training time of baseline model is: {end}s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.17      0.23      0.20      4679\n",
+      "           1       0.13      0.21      0.16      4865\n",
+      "           2       0.13      0.03      0.05      4722\n",
+      "           3       0.12      0.07      0.09      4891\n",
+      "           4       0.14      0.28      0.19      4891\n",
+      "           5       0.14      0.08      0.10      4850\n",
+      "           6       0.15      0.20      0.17      4838\n",
+      "           7       0.18      0.02      0.04      4725\n",
+      "           8       0.15      0.25      0.19      4806\n",
+      "           9       0.13      0.07      0.09      4733\n",
+      "\n",
+      "    accuracy                           0.14     48000\n",
+      "   macro avg       0.14      0.14      0.13     48000\n",
+      "weighted avg       0.14      0.14      0.13     48000\n",
+      "\n",
+      "The training time of baseline model is: 15.75s\n"
+     ]
+    }
+   ],
+   "source": [
+    "#train\n",
+    "start1 = time.process_time()\n",
+    "evaluation(baseline_model,noisy_labels[2000:],imgs[2000:] )\n",
+    "end1 = time.process_time() - start1\n",
+    "print(f\"The training time of baseline model is: {end1}s\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.31      0.45      0.37       202\n",
+      "           1       0.18      0.29      0.23       191\n",
+      "           2       0.30      0.07      0.11       203\n",
+      "           3       0.18      0.12      0.14       195\n",
+      "           4       0.25      0.49      0.33       214\n",
+      "           5       0.21      0.12      0.15       183\n",
+      "           6       0.27      0.35      0.30       207\n",
+      "           7       0.34      0.05      0.09       199\n",
+      "           8       0.29      0.45      0.35       203\n",
+      "           9       0.19      0.10      0.13       203\n",
+      "\n",
+      "    accuracy                           0.25      2000\n",
+      "   macro avg       0.25      0.25      0.22      2000\n",
+      "weighted avg       0.25      0.25      0.22      2000\n",
+      "\n",
+      "The training time is: 0.734375s\n"
+     ]
+    }
+   ],
+   "source": [
+    "#test\n",
+    "start2 = time.process_time()\n",
+    "evaluation(baseline_model, clean_labels[:2000], imgs[:2000])\n",
+    "end2 = time.process_time() - start2\n",
+    "print(f\"The training time is: {end2}s\")"
    ]
   },
   {
